Create a new project and have it ready to run.

--- a/etc/ws.conf
+++ b/etc/ws.conf
@@ -8,3 +8,4 @@
 description = A simple and lightweight framework for a Python command line application.
 # Uncomment this line to send `logging` messages to a file.
 logfile = log/ws.log
+template = /home/fuzzy/Development/hw-4.2.1
